# activation-ckpt-offload

./: .gitignore  Makefile  README.md  pyproject.toml
src/activation_ckpt_offload/: __init__.py  benchmark.py  checkpoint.py  cli.py  colab.py  data.py  model.py  plots.py
