[project]
name = "activation-ckpt-offload"
version = "0.1.0"
description = "Activation Checkpointing with CPU Offload (sync/async), benchmarks & memory timelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Evgenii Saurov", email = "saurov.ev@gmail.com" }]

dependencies = [
  "torch>=2.3.0",
  "numpy>=1.24.0",
  "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.6",
  "pytest>=8.0.0",
]

[project.scripts]
activation-ckpt-offload = "activation_ckpt_offload.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "A"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]